--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,25 +3,31 @@
 name="Android"
 platform="Android"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="launcher_configs/*,*.txt,*.json,*.ttf,*.png"
 exclude_filter="*.import"
 export_path="./PlainLauncher.apk"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 gradle_build/use_gradle_build=true
+gradle_build/gradle_build_directory=""
+gradle_build/android_source_template=""
+gradle_build/compress_native_libraries=false
 gradle_build/export_format=0
 gradle_build/min_sdk="24"
-gradle_build/target_sdk="29"
+gradle_build/target_sdk="34"
 architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
@@ -40,6 +46,7 @@ package/show_as_launcher_app=false
 launcher_icons/main_192x192="res://sprites/icon_text.png"
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
+launcher_icons/adaptive_monochrome_432x432=""
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 screen/immersive_mode=true
@@ -134,6 +141,7 @@ permissions/mount_format_filesystems=false
 permissions/mount_unmount_filesystems=false
 permissions/nfc=false
 permissions/persistent_activity=false
+permissions/post_notifications=false
 permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
@@ -200,3 +208,46 @@ permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=true
 plugins/GodotUniversalIntent=true
+
+[preset.1]
+
+name="Web"
+platform="Web"
+runnable=true
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../../output/plain/PlainLauncher.html"
+patches=PackedStringArray()
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
+variant/thread_support=false
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/export_icon=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/ensure_cross_origin_isolation_headers=true
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
+progressive_web_app/background_color=Color(0, 0, 0, 1)
